--- a/src/components/TodoItem/TodoItem.module.css
+++ b/src/components/TodoItem/TodoItem.module.css
@@ -1,88 +1,80 @@
-li {
+.list-item {
     height: auto;
-    background-color: #4cc9f0;
-    border-bottom: 1px solid;
-
-    transition: 0.5s;
-
     overflow: hidden;
     list-style: none;
     cursor: pointer;
+    background-color: var(--primary-color);
+    border-bottom: 1px solid;
+    transition: 0.5s;
 }
 
-li:hover {
-    background-color: #4895ef;
+.list-item:hover {
+    background-color: var(--secondary-color);
 }
 
-li:first-child {
+.list-item:first-child {
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
 
-li:last-child {
+.list-item:last-child {
     border-bottom: 0;
-    border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
 }
 
-label {
-    padding: 10px;
-
+.list-item__inner {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-
+    justify-content: space-between;
+    padding: 10px;
     cursor: pointer;
 }
 
-span {
+.text {
     position: relative;
     display: inline-block;
     transition: all 0.5s cubic-bezier(0.55, 0, 0.1, 1);
 }
 
-span::before {
-    content: "";
-
-    width: 0;
-    height: 2px;
-
+.text::before {
     position: absolute;
     top: calc(50%);
     right: 0;
-
+    width: 0;
+    height: 2px;
+    content: "";
     background: rgb(116, 116, 116);
-
     transition: inherit;
 }
 
-span.done {
+.done {
     color: rgb(116, 116, 116);
 }
 
-span.done::before {
+.done::before {
     left: 0;
     width: 100%;
 }
 
-button {
+.delete-button {
     width: 20px;
     height: 20px;
-    margin: 0;
     padding: 0;
-    border: 0;
+    margin: 0;
     background: transparent;
+    border: 0;
 }
 
-input[type="checkbox"] {
+.checkbox {
     width: 20px;
     height: 20px;
 }
 
-svg {
+.delete-icon {
     transition: 0.5s;
 }
 
-svg:hover {
+.delete-icon:hover {
     fill: #fff;
 }
