--- a/src/components/TodoItem/TodoItem.module.css
+++ b/src/components/TodoItem/TodoItem.module.css
@@ -31,6 +31,15 @@
     cursor: pointer;
 }
 
+.list-item-appear {
+    opacity: 0;
+}
+
+.list-item-done {
+    opacity: 1;
+    transition: 0.5s;
+}
+
 .text {
     position: relative;
     display: inline-block;
