--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -14,7 +14,8 @@
     margin-right: 10px;
     overflow: hidden;
     font-family: "Roboto", sans-serif;
-    font-size: 16px;
+    font-size: 20px;
+    color: gray;
     white-space: break-spaces;
     resize: none;
     border: solid 2px;
@@ -29,7 +30,7 @@
 }
 
 .input:focus {
-    font-size: 20px;
+    color: black;
     outline: 0;
 }
 
