--- a/src/components/TodoItem/TodoItem.module.css
+++ b/src/components/TodoItem/TodoItem.module.css
@@ -31,9 +31,18 @@
     cursor: pointer;
 }
 
+.checkbox {
+    flex-shrink: 0;
+    width: 20px;
+    height: 20px;
+}
+
 .text {
     position: relative;
     display: inline-block;
+    margin: 0 20px;
+    word-break: break-all;
+    white-space: break-spaces;
     transition: all 0.5s cubic-bezier(0.55, 0, 0.1, 1);
 }
 
@@ -58,17 +67,13 @@
 }
 
 .delete-button {
+    flex-shrink: 0;
     width: 20px;
     height: 20px;
     padding: 0;
     margin: 0;
     background: transparent;
     border: 0;
-}
-
-.checkbox {
-    width: 20px;
-    height: 20px;
 }
 
 .delete-icon {
