--- a/src/components/FIlter/Filter.module.css
+++ b/src/components/FIlter/Filter.module.css
@@ -4,7 +4,7 @@
     outline: none;
     border: 2px solid var(--primary-color);
     border-radius: var(--border-radius);
-    transition: 0.5s;
+    transition: var(--transition-duration);
 }
 
 .filter-select:hover,
