--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -17,7 +17,7 @@
     outline: none;
     border: 2px solid var(--primary-color);
     border-radius: var(--border-radius);
-    transition: 0.5s;
+    transition: var(--transition-duration);
 }
 
 .input:hover,
@@ -29,15 +29,10 @@
 .create-button {
     width: 28px;
     height: 28px;
-    padding: 0;
-    background: transparent;
-    outline: none;
-    border: 0;
-    cursor: pointer;
 }
 
 .create-icon {
-    transition: 0.5s;
+    transition: var(--transition-duration);
 }
 
 .create-button:hover .create-icon,
