--- a/src/components/TodoItem/TodoItem.module.css
+++ b/src/components/TodoItem/TodoItem.module.css
@@ -5,7 +5,7 @@
     cursor: pointer;
     margin-bottom: 1px;
     background-color: var(--primary-color);
-    transition: 0.5s;
+    transition: var(--transition-duration);
 }
 
 .list-item:hover {
@@ -69,15 +69,10 @@
 .delete-button {
     width: 20px;
     height: 20px;
-    padding: 0;
-    background: transparent;
-    outline: none;
-    border: 0;
-    cursor: pointer;
 }
 
 .delete-icon {
-    transition: 0.5s;
+    transition: var(--transition-duration);
 }
 
 .delete-button:hover .delete-icon,
